--- a/src/main/resources/scss/styles.scss
+++ b/src/main/resources/scss/styles.scss
@@ -43,3 +43,7 @@ $font-family-sans-serif: 'PT Sans', -apple-system, BlinkMacSystemFont, "Segoe UI
 .text-orange {
   color: $orange;
 }
+
+.border-w-2 {
+  border-width: 2px !important;
+}
