--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -51,5 +51,24 @@
     </div>
 </div> <!-- /container - #page -->
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
+<div id="modalNewAccount" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Klantregistratie voltooid</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Hartelijk welkom als nieuwe klant van DROVN-Bank.</p>
+                <p>Vanaf nu kun je <a href="/login">inloggen</a> met je gebruikersnaam en wachtwoord.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<script th:if="${accountCreated == 'true'}">
+    $('#modalNewAccount').modal();
+</script>
 </body>
 </html>
