rekeningoverzicht verder afgemaakt, tenaamstelling 2 personen

--- a/src/main/resources/templates/pages/foutpagina.html
+++ b/src/main/resources/templates/pages/foutpagina.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
     <div align="center">
-        <img src="ErrorImage" alt="Error"/>
+        <!--<img src="ErrorImage" alt="Error"/>-->
         <h1>Oeps, er ging iets mis</h1>
     <h2>Inloggen mislukt, probeer het nog een keer</h2>
         <a href="/login" class="btn btn-info" role="button">Opnieuw inloggen</a>
