--- a/src/main/resources/templates/pages/rekeningoverzicht.html
+++ b/src/main/resources/templates/pages/rekeningoverzicht.html
@@ -23,7 +23,7 @@
         <tbody>
         <tr th:each="a : ${customerWithAccountOverview.getAccountList()}">
             <td th:text="${a.iban}"></td>
-            <td> <ul> <li th:each="c : ${accountWithCustomerList.getCustomerList()}" th:text="${c.getUsername()}"></li></ul></td>
+            <td> <ul> <li th:each="customerName : ${customerNameList}" th:text="${customerName}"></li></ul></td>
             <td th:text="${a.balance}"></td>
         </tr>
         </tbody>
