--- a/src/main/resources/templates/pages/confirmation-legal.html
+++ b/src/main/resources/templates/pages/confirmation-legal.html
@@ -81,7 +81,7 @@
                                 <td th:text="*{personLegal.street}"></td>
                             </tr>
                             <tr>
-                                <th scope="row" width="50%">Bedrijfsverzamelgebouw, bedrijventerrein</th>
+                                <th scope="row" width="50%">Plaats</th>
                                 <td th:text="*{personLegal.residence}"></td>
                             </tr>
                             </tbody>
@@ -141,7 +141,7 @@
                                        th:field="*{personLegal.street}"/>
                             </div>
                             <div class="col-md-4 form-group">
-                                <label for="residence_legal">Bedrijfsverzamelgebouw, bedrijventerrein</label>
+                                <label for="residence_legal">Plaats</label>
                                 <input type="text" id="residence_legal" class="form-control"
                                        name="residence_legal" th:field="*{personLegal.residence}"/>
                             </div>
