--- a/src/main/resources/templates/pages/registration.html
+++ b/src/main/resources/templates/pages/registration.html
@@ -77,9 +77,9 @@
                                     <div class="col-md-2 form-group">
                                         <label for="mobile">Telefoon (mobiel)</label>
                                         <input type="tel" id="mobile" class="form-control" name="mobile"
-                                               pattern="[0-9]{2}-[0-9]{8}" aria-describedby="mobileHelp"
+                                               pattern="[0-9]{10}" aria-describedby="mobileHelp"
                                                th:field="*{personPrivate.phone}"/>
-                                        <small id="mobileHelp" class="form-text text-muted">Format: 06-12345678</small>
+                                        <small id="mobileHelp" class="form-text text-muted">Format: 0612345678</small>
                                     </div>
                                     <div class="col-md-12 mt-5 mb-3">
                                         <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
