--- a/src/main/resources/templates/pages/confirmation-private.html
+++ b/src/main/resources/templates/pages/confirmation-private.html
@@ -3,11 +3,11 @@
 <head th:replace="fragments/head :: head-default (pageTitle='Registratie bevestigen', metaRobots='noindex, nofollow', metaDescription='', metaKeywords='')"></head>
 <body>
 <div class="container-fluid min-vh-100" id="page">
-    <div id="header" class="row header-default">
+    <div class="row header-default" id="header">
         <header th:replace="fragments/header :: header-default"></header>
     </div>
-    <div id="main-content" class="row mb-5">
-        <main role="main" class="min-vw-100">
+    <div class="row mb-5" id="main-content">
+        <main class="min-vw-100" role="main">
             <div class="jumbotron mb-5"
                  style="filter: brightness(1.25); background: linear-gradient(65deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0) ), url('/images/klant-worden.jpg'); background-position: left 70%; background-repeat: no-repeat; background-size: cover;">
                 <div class="container text-white">
@@ -28,7 +28,7 @@
                         <table class="table table-striped mb-5" th:object="${registrationDto}">
                             <thead class="thead-dark">
                             <tr>
-                                <th scope="col" colspan="2">Persoonlijke gegevens</th>
+                                <th colspan="2" scope="col">Persoonlijke gegevens</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -71,7 +71,7 @@
                         <table class="table table-striped mb-5" th:object="${registrationDto}">
                             <thead class="thead-dark">
                             <tr>
-                                <th scope="col" colspan="2">Adresgegevens</th>
+                                <th colspan="2" scope="col">Adresgegevens</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -96,124 +96,134 @@
                         <table class="table table-striped mb-5" th:object="${registrationDto}">
                             <thead class="thead-dark">
                             <tr>
-                                <th scope="col" colspan="2">Accountgegevens</th>
+                                <th colspan="2" scope="col">Accountgegevens</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr>
                                 <th scope="row" width="50%">Gebruikersnaam</th>
-                                <td th:text="*{username}"></td>
+                                <td th:text="*{customer.username}"></td>
                             </tr>
                             </tbody>
                         </table>
-                        <form action="#" class="row" th:action="@{/bevestiging}" th:object="${registrationDto}"
-                              method="post">
-                            <input type="submit" class="btn btn-primary btn-lg btn-block mt-0 ml-3 mb-4 mr-2 pt-3 pb-3 "
+                        <form action="#" class="row" method="post"
+                              th:action="@{/bevestiging-particulier}"
+                              th:object="${registrationDto}">
+                            <input class="btn btn-primary btn-lg btn-block mt-0 ml-3 mb-4 mr-2 pt-3 pb-3 " type="submit"
                                    value="Registratie voltooien"/>
                         </form>
                     </div>
                 </div>
-                <div id="accordion" class="pt-5 pb-5">
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                         data-parent="#accordion">
-                        <form action="#" class="row" th:action="@{/bevestiging-particulier}"
-                              th:object="${registrationDto}" method="post">
+                <div class="pt-5 pb-5" id="accordion">
+                    <div aria-labelledby="headingOne" class="collapse show" data-parent="#accordion"
+                         id="collapseOne">
+                        <form action="#" class="row" method="post"
+                              th:action="@{/registratie-particulier}" th:object="${registrationDto}">
                             <div class="col-md-12 mt-2 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Persoonlijke gegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="initials">Voorletters</label>
-                                <input type="text" id="initials" class="form-control" name="initials"
-                                       th:field="*{personPrivate.initials}"/>
+                                <input class="form-control" id="initials" name="initials"
+                                       th:field="*{personPrivate.initials}"
+                                       type="text"/>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="firstname">Voornaam</label>
-                                <input type="text" id="firstname" class="form-control" name="firstName"
-                                       th:field="*{personPrivate.firstName}"/>
+                                <input class="form-control" id="firstname" name="firstName"
+                                       th:field="*{personPrivate.firstName}"
+                                       type="text"/>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="preposition">Tussenvoegsel</label>
-                                <input type="text" id="preposition" class="form-control" name="preposition"
-                                       th:field="*{personPrivate.preposition}"/>
+                                <input class="form-control" id="preposition" name="preposition"
+                                       th:field="*{personPrivate.preposition}"
+                                       type="text"/>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="lastname">Achternaam</label>
-                                <input type="text" id="lastname" class="form-control" name="surName"
-                                       th:field="*{personPrivate.surName}"/>
+                                <input class="form-control" id="lastname" name="surName"
+                                       th:field="*{personPrivate.surName}"
+                                       type="text"/>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="dateOfBirth">Geboortedatum</label>
-                                <input type="date" id="dateOfBirth" class="form-control" name="dateOfBirth"
-                                       th:field="*{personPrivate.dateOfBirth}"/>
+                                <input class="form-control" id="dateOfBirth" name="dateOfBirth"
+                                       th:field="*{personPrivate.dateOfBirth}"
+                                       type="date"/>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="socialSecurityNumber">Burgerservicenummer (BSN)</label>
-                                <input type="number" id="socialSecurityNumber" class="form-control"
-                                       name="socialSecurityNumber" aria-describedby="socialSecurityNumberHelp"
-                                       th:field="*{personPrivate.socialSecurityNumber}"/>
-                                <small id="socialSecurityNumberHelp" class="form-text text-muted">Je unieke,
+                                <input aria-describedby="socialSecurityNumberHelp" class="form-control"
+                                       id="socialSecurityNumber"
+                                       name="socialSecurityNumber" th:field="*{personPrivate.socialSecurityNumber}"
+                                       type="number"/>
+                                <small class="form-text text-muted" id="socialSecurityNumberHelp">Je unieke,
                                     9-cijferige persoonsnummer</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="email">Emailadres</label>
-                                <input type="email" id="email" class="form-control" name="email"
-                                       th:field="*{personPrivate.email}"/>
+                                <input class="form-control" id="email" name="email" th:field="*{personPrivate.email}"
+                                       type="email"/>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="mobile">Telefoon (mobiel)</label>
-                                <input type="tel" id="mobile" class="form-control" name="mobile"
-                                       pattern="[0-9]{10}" aria-describedby="mobileHelp"
-                                       th:field="*{personPrivate.phone}"/>
-                                <small id="mobileHelp" class="form-text text-muted">Format: 06-12345678</small>
+                                <input aria-describedby="mobileHelp" class="form-control" id="mobile" name="mobile"
+                                       pattern="[0-9]{10}" th:field="*{personPrivate.phone}"
+                                       type="tel"/>
+                                <small class="form-text text-muted" id="mobileHelp">Format: 06-12345678</small>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Adresgegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="postalCode">Postcode</label>
-                                <input type="text" id="postalCode" class="form-control" name="postalCode"
-                                       aria-describedby="postalCodeHelp" th:field="*{personPrivate.postalCode}"/>
-                                <small id="postalCodeHelp" class="form-text text-muted">Format: 1234AB</small>
+                                <input aria-describedby="postalCodeHelp" class="form-control" id="postalCode"
+                                       name="postalCode"
+                                       th:field="*{personPrivate.postalCode}" type="text"/>
+                                <small class="form-text text-muted" id="postalCodeHelp">Format: 1234AB</small>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="homeNumber">Huisnr.</label>
-                                <input type="text" id="homeNumber" class="form-control" name="homeNumber"
-                                       aria-describedby="homeNumberHelp" th:field="*{personPrivate.homeNumber}"/>
-                                <small id="homeNumberHelp" class="form-text text-muted">Format: 123, 12b,
+                                <input aria-describedby="homeNumberHelp" class="form-control" id="homeNumber"
+                                       name="homeNumber"
+                                       th:field="*{personPrivate.homeNumber}" type="text"/>
+                                <small class="form-text text-muted" id="homeNumberHelp">Format: 123, 12b,
                                     123-I</small>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="street">Straat</label>
-                                <input type="text" id="street" class="form-control" name="street"
-                                       th:field="*{personPrivate.street}"/>
+                                <input class="form-control" id="street" name="street" th:field="*{personPrivate.street}"
+                                       type="text"/>
                             </div>
                             <div class="col-md-4 form-group">
                                 <label for="residence">Woonplaats</label>
-                                <input type="text" id="residence" class="form-control" name="residence"
-                                       th:field="*{personPrivate.residence}"/>
+                                <input class="form-control" id="residence" name="residence"
+                                       th:field="*{personPrivate.residence}"
+                                       type="text"/>
                             </div>
                             <div class="col-md-12 mt-5 mb-3">
                                 <h4 class="border border-dark border-w-2 rounded p-3">Accountgegevens</h4>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="username_private">Gebruikersnaam</label>
-                                <input type="text" id="username_private" class="form-control"
-                                       name="username_private" th:field="*{username}"/>
+                                <input class="form-control" id="username_private" name="username_private"
+                                       th:field="*{customer.username}" type="text"/>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="password_private">Wachtwoord</label>
-                                <input type="password" id="password_private" name="password_private"
-                                       class="form-control" th:field="*{password}"/>
+                                <input class="form-control" id="password_private" name="password_private"
+                                       th:field="*{customer.password}" type="password"/>
                             </div>
                             <div class="col-md-2 form-group">
                                 <label for="password_private_confirmation">Wachtwoord</label>
-                                <input type="password" id="password_private_confirmation"
-                                       name="password_private_confirmation" class="form-control"
-                                       th:field="*{passwordConfirmation}"/>
+                                <input class="form-control" id="password_private_confirmation"
+                                       name="password_private_confirmation" th:field="*{passwordConfirmation}"
+                                       type="password"/>
                             </div>
                             <div class="col-md-12 mt-3">
                                 <div class="col-md-6 pl-0">
-                                    <input type="submit" class="btn btn-secondary btn-lg btn-block mt-4 mb-4 pt-3 pb-3"
+                                    <input class="btn btn-secondary btn-lg btn-block mt-4 mb-4 pt-3 pb-3" type="submit"
                                            value="Gegevens wijzigen"/>
                                 </div>
                             </div>
@@ -221,12 +231,11 @@
                     </div>
                 </div>
             </div>
+        </main>
     </div>
-    </main>
-</div>
-<div id="footer" class="row footer-default">
-    <footer th:replace="fragments/footer :: footer-default"></footer>
-</div>
+    <div class="row footer-default" id="footer">
+        <footer th:replace="fragments/footer :: footer-default"></footer>
+    </div>
 </div> <!-- /container - #page -->
 <div th:replace="fragments/scripts :: scripts-before-closing-tag"></div>
 <script>
